# EventManager

./: CMakeLists.txt
include/: event_manager.hpp  event_types.hpp
src/: event_manager.cpp  main.cpp
test/: test_eventmanager.cpp
